[DMS-889] Update the on-premises installation instructions